--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,15 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 71px 123px 40px 140px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 77px 0px 40px 0px;
 }
 .offer__title {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   font-weight: 700;
   font-size: 64px;
   color: #490e84;
@@ -113,11 +119,11 @@ body {
 .offer__title:not(:last-child) {
   margin-bottom: 46px;
 }
-.offer__image {
-  max-width: 100%;
-}
 .offer__image:not(:last-child) {
   margin-bottom: 26px;
+}
+.offer__img {
+  max-width: 100%;
 }
 .offer__button {
   -ms-flex-item-align: center;
@@ -130,10 +136,6 @@ body {
   text-transform: uppercase;
   text-align: center;
   color: #ffffff;
-}
-
-.image-offer__item {
-  max-width: 100%;
 }
 
 .whats-new__content {
