--- a/css/style.scss
+++ b/css/style.scss
@@ -53,14 +53,14 @@ body {
   &__content {
     display: flex;
     flex-direction: column;
-    // align-items: center;
-    // text-align: center;
-    padding: 71px 123px 40px 140px;
+    align-items: center;
+    padding: 77px 0px 40px 0px;
   }
 
   // .offer__title
 
   &__title {
+    flex: 1 1 auto;
     font-weight: 700;
     font-size: 64px;
     color: #490e84;
@@ -74,10 +74,15 @@ body {
   // .offer__image
 
   &__image {
-    max-width: 100%;
     &:not(:last-child) {
       margin-bottom: 26px;
     }
+  }
+
+  // .offer__img
+
+  &__img {
+    max-width: 100%;
   }
 
   // .offer__button
@@ -92,13 +97,6 @@ body {
     text-transform: uppercase;
     text-align: center;
     color: #ffffff;
-  }
-}
-.image-offer {
-  // .image-offer__item
-
-  &__item {
-    max-width: 100%;
   }
 }
 
