fear: finish whats-new css

--- a/css/style.css
+++ b/css/style.css
@@ -144,26 +144,39 @@ body {
 .whats-new__title:not(:last-child) {
   margin-bottom: 50px;
 }
-.whats-new__body {
+.whats-new__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.whats-new__left {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+.whats-new__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
-.whats-new__image {
-  padding: 37px 100px 37px 100px;
-}
-.whats-new__item {
+.whats-new__img {
   max-width: 100%;
 }
-.whats-new__info {
+.whats-new__body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
