refactor: change scc comm

--- a/css/style.scss
+++ b/css/style.scss
@@ -120,7 +120,7 @@ body {
     }
   }
 
-  // .whats-new__body
+  // .whats-new__row
 
   &__row {
     display: flex;
@@ -154,7 +154,7 @@ body {
     max-width: 100%;
   }
 
-  // .whats-new__info
+  // .whats-new__body
 
   &__body {
     flex: 1 1 auto;
