--- a/css/style.css
+++ b/css/style.css
@@ -138,13 +138,13 @@ body {
   color: #ffffff;
 }
 
-.whats-new__content {
+.about__content {
   padding: 90px 0px 75px 0px;
 }
-.whats-new__title:not(:last-child) {
+.about__title:not(:last-child) {
   margin-bottom: 54px;
 }
-.whats-new__row {
+.about__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -155,10 +155,10 @@ body {
           justify-content: center;
   row-gap: 30px;
 }
-.whats-new__body {
+.about__body {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 71.55%;
-          flex: 1 1 71.55%;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -169,14 +169,14 @@ body {
   row-gap: 30px;
   max-width: 560px;
 }
-.whats-new__text {
+.about__text {
   line-height: 130%;
 }
-.whats-new__text_bold {
+.about__text_bold {
   font-weight: 700;
   font-size: 20px;
 }
-.whats-new__image {
+.about__image {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 28.45%;
           flex: 1 1 28.45%;
@@ -190,6 +190,6 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-.whats-new__img {
+.about__img {
   max-width: 100%;
 }
