--- a/css/style.scss
+++ b/css/style.scss
@@ -125,23 +125,29 @@ body {
   &__row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    margin: 0px -45px;
     row-gap: 30px;
+  }
+
+  // .about__left
+
+  &__left {
+    flex: 1 1 50.41%;
+    padding: 0px 45px;
   }
 
   // .about__body
 
   &__body {
-    flex: 1 1 auto;
     display: flex;
     flex-direction: column;
     row-gap: 30px;
-    max-width: 560px;
   }
 
   // .about__text
 
   &__text {
+    max-width: 560px;
     line-height: 130%;
     // .about__text_bold
 
@@ -151,13 +157,19 @@ body {
     }
   }
 
+  // .about__right
+
+  &__right {
+    align-self: center;
+    flex: 1 1 49.59%;
+    padding: 0px 45px;
+  }
+
   // .about__image
 
   &__image {
-    flex: 1 1 28.45%;
     display: flex;
     justify-content: center;
-    align-items: center;
   }
 
   // .about__item
